--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -23,6 +23,11 @@
             <a ui-sref="camera-action-detail({id:vm.cue.cameraAction.id})">{{vm.cue.cameraAction.id}}</a>
         </dd>
         <hr>
+        <dt><span>Time Point</span></dt>
+        <dd>
+            <a ui-sref="time-point-detail({id:vm.cue.timePoint.id})">{{vm.cue.timePoint.startTime}}</a>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
