--- a/src/main/webapp/app/entities/cue/cue-dialog.html
+++ b/src/main/webapp/app/entities/cue/cue-dialog.html
@@ -38,6 +38,12 @@
                 <option value=""></option>
             </select>
         </div>
+        <div class="form-group">
+            <label for="field_timePoint">Time Point</label>
+            <select class="form-control" id="field_timePoint" name="timePoint" ng-model="vm.cue.timePoint" ng-options="timePoint as timePoint.startTime for timePoint in vm.timepoints | orderBy:'id' track by timePoint.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
