--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -23,6 +23,7 @@
                     <th jh-sort-by="player.id"><span>Player</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="camera.id"><span>Camera</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="cameraAction.id"><span>Camera Action</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="timePoint.startTime"><span>Time Point</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -40,6 +41,9 @@
                     </td>
                     <td>
                         <a ui-sref="camera-action-detail({id:cue.cameraAction.id})">{{cue.cameraAction.id}}</a>
+                    </td>
+                    <td>
+                        <a ui-sref="time-point-detail({id:cue.timePoint.id})">{{cue.timePoint.startTime}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
