--- a/src/main/webapp/app/timeline/timeline.html
+++ b/src/main/webapp/app/timeline/timeline.html
@@ -2,9 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             <h2 class="text-center">Timeline</h2><br /><br />
-            <div id="timeline">
-                <canvas id="concertTimeline"></canvas>
-            </div>
+            <div id="visualization"></div>
         </div>
     </div>
 </div>
