--- a/src/main/webapp/app/timeline/timeline.html
+++ b/src/main/webapp/app/timeline/timeline.html
@@ -3,6 +3,23 @@
         <div class="col-md-12">
             <h2 class="text-center">Timeline</h2><br /><br />
             <div id="visualization"></div>
+            <fieldset class="form-group">
+                <label for="selectObjectType">Which player should we use for the cue?</label>
+                <select class="form-control" id="selectObjectType">
+                    <option ng-repeat="player in vm.players" value="player.id">{{player.name}}</option>
+                </select>
+            </fieldset>
+
+            <br />
+            <div class="row">
+                <div class="col-md-4">
+                    <fieldset class="form-group">
+                        <input type="text" class="form-control" id="nameNewObject" placeholder="Name">
+                    </fieldset>
+                </div>
+                <!--<div class="col-md-4">Test</div>-->
+                <!--<div class="col-md-4">Test</div>-->
+            </div>
         </div>
     </div>
 </div>
