--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,39 +11,39 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
-    <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.css" />
-    <link rel="stylesheet" href="bower_components/vis/dist/vis.css" />
+    <link rel="stylesheet" href="bower_components/vis/dist/vis.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
     <link rel="stylesheet" href="content/css/custom.css">
+    <link rel="stylesheet" href="content/css/bootstrap-material-design.css" />
+    <link rel="stylesheet" href="content/css/ripples.css" />
     <!-- endbuild -->
 </head>
 <body ng-app="thefirstorderApp">
-<!--[if lt IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-<div ng-show="{{ENV === 'dev'}}" class="development" ng-cloak></div>
-<div ui-view="navbar" ng-cloak></div>
-<div class="container">
-    <div class="well" ui-view="content"></div>
+    <!--[if lt IE 9]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <div ng-show="{{ENV === 'dev'}}" class="development" ng-cloak></div>
+    <div ui-view="navbar" ng-cloak></div>
+    <div class="container">
+        <div class="well" ui-view="content"></div>
 
-    <div class="footer" ng-cloak>
-        <p class="text-center">&copy; 2016 - The First Order</p>
+        <div class="footer" ng-cloak>
+            <p class="text-center">&copy; 2016 - The First Order</p>
+        </div>
     </div>
-</div>
 
-<!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
-<script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X');ga('send','pageview');
-</script>-->
+    <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script>-->
 
     <!-- build:js app/vendor.js -->
     <!-- bower:js -->
@@ -66,11 +66,8 @@
     <script src="bower_components/sockjs-client/dist/sockjs.js"></script>
     <script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
     <script src="bower_components/arrive/src/arrive.js"></script>
-    <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-    <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
-    <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
     <script src="bower_components/fabric.js/dist/fabric.min.js"></script>
-    <script src="bower_components/vis/dist/vis.js"></script>
+    <script src="bower_components/vis/dist/vis.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -82,6 +79,7 @@
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
     <script src="app/services/user/user.service.js"></script>
+    <script src="app/layouts/error/error.state.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -95,7 +93,6 @@
     <script src="app/services/auth/account.service.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
-    <script src="app/layouts/error/error.state.js"></script>
     <script src="app/entities/time-point/time-point.state.js"></script>
     <script src="app/entities/time-point/time-point.service.js"></script>
     <script src="app/entities/time-point/time-point.controller.js"></script>
@@ -108,18 +105,21 @@
     <script src="app/entities/script/script-dialog.controller.js"></script>
     <script src="app/entities/script/script-detail.controller.js"></script>
     <script src="app/entities/script/script-delete-dialog.controller.js"></script>
-    <script src="app/entities/project/project.state.js"></script>
-    <script src="app/entities/project/project.service.js"></script>
-    <script src="app/entities/project/project.controller.js"></script>
-    <script src="app/entities/project/project-dialog.controller.js"></script>
-    <script src="app/entities/project/project-detail.controller.js"></script>
-    <script src="app/entities/project/project-delete-dialog.controller.js"></script>
     <script src="app/entities/player/player.state.js"></script>
     <script src="app/entities/player/player.service.js"></script>
     <script src="app/entities/player/player.controller.js"></script>
     <script src="app/entities/player/player-dialog.controller.js"></script>
     <script src="app/entities/player/player-detail.controller.js"></script>
     <script src="app/entities/player/player-delete-dialog.controller.js"></script>
+    <script src="app/entities/project/project.state.js"></script>
+    <script src="app/entities/project/project.service.js"></script>
+    <script src="app/entities/project/project.controller.js"></script>
+    <script src="app/entities/project/project-dialog.controller.js"></script>
+    <script src="app/entities/project/project-detail.controller.js"></script>
+    <script src="app/entities/project/project-delete-dialog.controller.js"></script>
+    <script src="app/components/alert/alert.service.js"></script>
+    <script src="app/components/alert/alert.directive.js"></script>
+    <script src="app/components/alert/alert-error.directive.js"></script>
     <script src="app/entities/map/map.state.js"></script>
     <script src="app/entities/map/map.service.js"></script>
     <script src="app/entities/map/map.controller.js"></script>
@@ -132,6 +132,11 @@
     <script src="app/entities/cue/cue-dialog.controller.js"></script>
     <script src="app/entities/cue/cue-detail.controller.js"></script>
     <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
+    <script src="app/admin/user-management/user-management.state.js"></script>
+    <script src="app/admin/user-management/user-management.controller.js"></script>
+    <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
+    <script src="app/admin/user-management/user-management-detail.controller.js"></script>
+    <script src="app/admin/user-management/user-management-delete-dialog.controller.js"></script>
     <script src="app/entities/camera-action/camera-action.state.js"></script>
     <script src="app/entities/camera-action/camera-action.service.js"></script>
     <script src="app/entities/camera-action/camera-action.controller.js"></script>
@@ -144,6 +149,8 @@
     <script src="app/entities/camera/camera-dialog.controller.js"></script>
     <script src="app/entities/camera/camera-detail.controller.js"></script>
     <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
+    <script src="app/components/login/login.service.js"></script>
+    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort.directive.js"></script>
@@ -155,31 +162,21 @@
     <script src="app/components/util/data-util.service.js"></script>
     <script src="app/components/util/capitalize.filter.js"></script>
     <script src="app/components/util/base64.service.js"></script>
-    <script src="app/components/login/login.service.js"></script>
-    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/form/uib-pagination.config.js"></script>
     <script src="app/components/form/uib-pager.config.js"></script>
     <script src="app/components/form/show-validation.directive.js"></script>
     <script src="app/components/form/pagination.constants.js"></script>
     <script src="app/components/form/minbytes.directive.js"></script>
     <script src="app/components/form/maxbytes.directive.js"></script>
-    <script src="app/components/alert/alert.service.js"></script>
-    <script src="app/components/alert/alert.directive.js"></script>
-    <script src="app/components/alert/alert-error.directive.js"></script>
+    <script src="app/blocks/config/localstorage.config.js"></script>
+    <script src="app/blocks/config/http.config.js"></script>
+    <script src="app/blocks/config/compile.config.js"></script>
+    <script src="app/blocks/config/alert.config.js"></script>
     <script src="app/blocks/interceptor/notification.interceptor.js"></script>
     <script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
     <script src="app/blocks/interceptor/auth.interceptor.js"></script>
     <script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
     <script src="app/blocks/handlers/state.handler.js"></script>
-    <script src="app/blocks/config/localstorage.config.js"></script>
-    <script src="app/blocks/config/http.config.js"></script>
-    <script src="app/blocks/config/compile.config.js"></script>
-    <script src="app/blocks/config/alert.config.js"></script>
-    <script src="app/admin/user-management/user-management.state.js"></script>
-    <script src="app/admin/user-management/user-management.controller.js"></script>
-    <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
-    <script src="app/admin/user-management/user-management-detail.controller.js"></script>
-    <script src="app/admin/user-management/user-management-delete-dialog.controller.js"></script>
     <script src="app/admin/tracker/tracker.state.js"></script>
     <script src="app/admin/tracker/tracker.service.js"></script>
     <script src="app/admin/tracker/tracker.controller.js"></script>
@@ -223,6 +220,7 @@
     <script src="app/app.constants.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
-
+    <script src="content/js/material.js"></script>
+    <script src="content/js/ripples.js"></script>
 </body>
 </html>
