--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="content/css/ripples.css" />
     <!-- endbuild -->
 </head>
-<body ng-app="thefirstorderApp">
+<body ng-app="thefirstorderApp" class="ripple-effect">
     <!--[if lt IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -222,5 +222,8 @@
     <!-- endbuild -->
     <script src="content/js/material.js"></script>
     <script src="content/js/ripples.js"></script>
+    <script type="text/javascript">
+        $.material.init()
+    </script>
 </body>
 </html>
