Display names of Script and Map in Project entity.
Instead of displaying the id, it now displays the name of the script and
map.

--- a/src/main/webapp/app/entities/project/projects.html
+++ b/src/main/webapp/app/entities/project/projects.html
@@ -32,10 +32,10 @@
                     <td><a ui-sref="project-detail({id:project.id})">{{project.id}}</a></td>
                     <td>{{project.name}}</td>
                     <td>
-                        <a ui-sref="script-detail({id:project.script.id})">{{project.script.id}}</a>
+                        <a ui-sref="script-detail({id:project.script.id})">{{project.script.name}}</a>
                     </td>
                     <td>
-                        <a ui-sref="map-detail({id:project.map.id})">{{project.map.id}}</a>
+                        <a ui-sref="map-detail({id:project.map.id})">{{project.map.name}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
